More spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ h3 {
 }
 .facility-col h3{
     margin-top: 6px;
-    /*margin-bottom: 5px;*/
+    margin-bottom: 5px;
     text-align: left;
     padding: 10px;
 }
@@ -390,13 +390,6 @@ h3 {
     padding: 0; 
 }
 
-@media(max-width:700px){
-    .cta h1{
-        font-size: 20px;
-        padding: 5px;
-    }
-}
-
 .cta-btn {
     display: inline-block;
     text-decoration: none;
@@ -416,6 +409,12 @@ h3 {
         background: transparent;
     }
 
+@media(max-width:700px) {
+    .cta h1 {
+        font-size: 20px;
+        padding: 100px 10px 10px 10px;
+    }
+}
 /*--------------Footer---------------*/
 
 .footer {
